--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -530,6 +530,8 @@ controller_templates:
       - Workshop Credential
     extra_vars:
       org_id: "Default_Organization"
+      convert_convert2rhel_opts: '--no-rpm-va'
+      convert_reboot_requested: true
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
