--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -480,8 +480,8 @@ controller_templates:
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
 
-  - name: CONVERT2RHEL / 01 - Upgrade OS to latest release
-    description: Upgrade OS to latest available packages
+  - name: CONVERT2RHEL / 01 - Update OS to latest release
+    description: Update OS to latest available packages
     project: Automated Management
     playbook: upgrade_instance.yml
     inventory: EC2 Dynamic Inventory
@@ -492,6 +492,17 @@ controller_templates:
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
+    survey_enabled: true
+    survey:
+      name: ''
+      description: ''
+      spec:
+        - question_name: Select inventory group
+          type: multiplechoice
+          variable: dynamic_inventory_group
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '.*') | map(attribute='name') | list }}"
+          required: true
+    ask_limit_on_launch: true
 
   - name: CONVERT2RHEL / 02 - analysis
     description: Pre-conversion analysis of EL systems
