Adjust hosts to work with job template survey var

--- a/update_instance.yml
+++ b/update_instance.yml
@@ -1,6 +1,6 @@
 ---
 - name: Update OS and reboot
-  hosts: all
+  hosts: "{{ dynamic_inventory_group | default(omit) }}"
   gather_facts: false
   become: true
   tasks:
