--- a/c2r_convert.yml
+++ b/c2r_convert.yml
@@ -26,6 +26,11 @@
       ansible.builtin.import_role:
         name: infra.convert2rhel.convert
 
+    - name: Generate current repo configuration
+      ansible.builtin.command: >-
+        subscription-manager repos
+      ignore_errors: true
+
     - name: Update system facts on Satellite
       ansible.builtin.command: >-
         subscription-manager facts --update
