--- a/config_as_code/satellite/leapp_8_to_9/activation_keys.yml
+++ b/config_as_code/satellite/leapp_8_to_9/activation_keys.yml
@@ -4,4 +4,14 @@ satellite_activation_keys:
   - name: "RHEL8IPU_Dev"
     lifecycle_environment: "RHEL8IPU_Dev"
     content_view: "RHEL8IPU"
+  # Red Hat Enterprise Linux 9
+  - name: "RHEL9_Dev"
+    lifecycle_environment: "RHEL9_Dev"
+    content_view: "RHEL9"
+  - name: "RHEL9_QA"
+    lifecycle_environment: "RHEL9_QA"
+    content_view: "RHEL9"
+  - name: "RHEL9_Prod"
+    lifecycle_environment: "RHEL9_Prod"
+    content_view: "RHEL9"
 ...
