Switch to RHEL 9.2 repos for RHEL8IPU CV

--- a/config_as_code/satellite/leapp_8_to_9/repositories.yml
+++ b/config_as_code/satellite/leapp_8_to_9/repositories.yml
@@ -6,4 +6,8 @@ satellite_products:
         releasever: "9.0"
       - name: "Red Hat Enterprise Linux 9 for x86_64 - AppStream (RPMs)"
         releasever: "9.0"
+      - name: "Red Hat Enterprise Linux 9 for x86_64 - BaseOS (RPMs)"
+        releasever: "9.2"
+      - name: "Red Hat Enterprise Linux 9 for x86_64 - AppStream (RPMs)"
+        releasever: "9.2"
 ...
