--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -902,8 +902,12 @@ controller_templates:
       satellite_activation_key_leapp: 'RHEL8IPU_Dev'
       leapp_repos_enabled:
         - !unsafe 'satellite-client-6-for-rhel-{{ ansible_distribution_major_version | int + 1 }}-x86_64-rpms'
-      analysis_packages_el7:
+      analysis_packages_el8:
         - leapp-upgrade
+        - cockpit
+        - cockpit-system
+        - cockpit-leapp
+        - vdo
       leapp_preupg_opts: '--target 9.2'
     ask_variables_on_launch: true
     ask_limit_on_launch: true
