--- a/config_as_code/controller/rhel_9_inventories/job_templates.yml
+++ b/config_as_code/controller/rhel_9_inventories/job_templates.yml
@@ -21,4 +21,31 @@ controller_templates:
           type: multiplechoice
           choices: "{{ hostvars['satellite.example.com']['satellite_content_views'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list + hostvars['ansible-1.example.com']['satellite_content_views'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list }}"
           required: true
+  - name: CONTROLLER / Update inventories via dynamic sources
+    project: Automated Management
+    playbook: controller_inventory_source_update.yml
+    inventory: Workshop Inventory
+    credentials:
+      - Controller Credential
+    notification_templates_started: Telemetry
+    notification_templates_success: Telemetry
+    notification_templates_error: Telemetry
+    survey_enabled: true
+    survey:
+      name: ''
+      description: ''
+      spec:
+        - question_name: Select inventory to update
+          variable: content_view
+          type: multiplechoice
+          choices: "{{ hostvars['satellite.example.com']['satellite_content_views'] | selectattr('name', 'defined') | map(attribute='name') | list + hostvars['ansible-1.example.com']['satellite_content_views'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list }}"
+          required: true
+        - question_name: Choose Environment
+          type: multiplechoice
+          variable: env
+          choices:
+            - Dev
+            - QA
+            - Prod
+          required: true
 ...
