Include convert2rhel CaC for Satellite

--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -1017,6 +1017,7 @@ controller_templates:
           type: multiplechoice
           variable: satellite_cac_scenario
           choices:
+            - CENTOS7_to_RHEL7
             - RHEL7_to_RHEL8
             - RHEL8_to_RHEL9
           required: true
