--- a/c2r_analysis.yml
+++ b/c2r_analysis.yml
@@ -79,7 +79,7 @@
 
     - name: Remove CentOS repos that were placed by infra.convert2rhel analysis role
       ansible.builtin.file:
-        path: "{{ item }}"
+        path: "{{ path }}"
         state: absent
       with_items: "{{ centos_repos.files | default([]) }}"
       loop_control:
