Set release version to 8.8 for RHEL8 AKs

--- a/host_vars/satellite.example.com/activation_keys.yml
+++ b/host_vars/satellite.example.com/activation_keys.yml
@@ -14,12 +14,15 @@ satellite_activation_keys:
   - name: "RHEL8_Dev"
     lifecycle_environment: "RHEL8_Dev"
     content_view: "RHEL8"
+    release_version: "8.8"
   - name: "RHEL8_QA"
     lifecycle_environment: "RHEL8_QA"
     content_view: "RHEL8"
+    release_version: "8.8"
   - name: "RHEL8_Prod"
     lifecycle_environment: "RHEL8_Prod"
     content_view: "RHEL8"
+    release_version: "8.8"
   # Community Enterprise Linux 7
   - name: "CentOS7_Dev"
     lifecycle_environment: "CentOS7_Dev"
