--- a/setup_satellite_via_varsfiles.yml
+++ b/setup_satellite_via_varsfiles.yml
@@ -40,4 +40,9 @@
     - name: Include satellite_repository_sync_subtasks
       ansible.builtin.include_tasks: satellite_repository_sync_subtasks.yml
       when: sync_repository | default(true) | bool
+
+    - name: execute content_views role
+      ansible.builtin.import_role:
+        name: "content_views"
+      delegate_to: localhost
 ...
