--- a/config_as_code/satellite/leapp_8_to_9/activation_keys.yml
+++ b/config_as_code/satellite/leapp_8_to_9/activation_keys.yml
@@ -4,6 +4,7 @@ satellite_activation_keys:
   - name: "RHEL8IPU_Dev"
     lifecycle_environment: "RHEL8IPU_Dev"
     content_view: "RHEL8IPU"
+    release_version: "8.8"
   # Red Hat Enterprise Linux 9
   - name: "RHEL9_Dev"
     lifecycle_environment: "RHEL9_Dev"
