--- a/config_as_code/controller/rhel_9_inventories/job_templates.yml
+++ b/config_as_code/controller/rhel_9_inventories/job_templates.yml
@@ -21,6 +21,7 @@ controller_templates:
           type: multiplechoice
           choices: "{{ hostvars['satellite.example.com']['satellite_content_views'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list + hostvars['ansible-1.example.com']['satellite_content_views'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list }}"
           required: true
+
   - name: CONTROLLER / Update inventories via dynamic sources
     project: Automated Management
     playbook: controller_inventory_source_update.yml
@@ -48,4 +49,31 @@ controller_templates:
             - QA
             - Prod
           required: true
+
+  - name: LEAPP / RHEL7to8 / 03 Rollback
+    description: Revert node snapshot - selection via dynamic inventory group
+    project: Automated Management
+    playbook: snapshot_instance_lvm.yml
+    inventory: EC2 Dynamic Inventory
+    credentials:
+      - Workshop Credential
+    extra_vars:
+      snapshot_set_name: snap01
+      snapshot_create_boot_backup: true
+      lvm_snapshots_action: revert
+    survey_enabled: true
+    survey:
+      name: ''
+      description: ''
+      spec:
+        - question_name: Select inventory group
+          type: multiplechoice
+          variable: dynamic_inventory_group
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list }}"
+          required: true
+    ask_variables_on_launch: true
+    ask_limit_on_launch: true
+    notification_templates_started: Telemetry
+    notification_templates_success: Telemetry
+    notification_templates_error: Telemetry
 ...
