--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -287,13 +287,22 @@ controller_templates:
           variable: lifecycle_stage
           choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list + hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list }}"
           required: true
-        - question_name: Check
+        - question_name: Include kernel updates? (Kernel update will result in system reboot)
           type: multiplechoice
-          variable: check_only
+          variable: include_kernel_updates
           choices:
             - 'yes'
             - 'no'
-          required: true
+          default: 'yes'
+          required: false
+        - question_name: Check for updates only? Do not patch at this time?
+          type: multiplechoice
+          variable: update_check_only
+          choices:
+            - 'yes'
+            - 'no'
+          default: 'no'
+          required: false
     ask_limit_on_launch: true
 
   - name: SERVER / RHEL7 - Fact Scan
@@ -477,30 +486,6 @@ controller_templates:
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
-
-  - name: CONVERT2RHEL / 01 - Update OS to latest release
-    description: Update OS to latest available packages
-    project: Automated Management
-    playbook: update_instance.yml
-    inventory: EC2 Dynamic Inventory
-    credentials:
-      - Workshop Credential
-    extra_vars:
-      ec2_region: "{{ workshop_ec2_region }}"
-    notification_templates_started: Telemetry
-    notification_templates_success: Telemetry
-    notification_templates_error: Telemetry
-    survey_enabled: true
-    survey:
-      name: ''
-      description: ''
-      spec:
-        - question_name: Select inventory group
-          type: multiplechoice
-          variable: dynamic_inventory_group
-          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '.*') | map(attribute='name') | list }}"
-          required: true
-    ask_limit_on_launch: true
 
   - name: CONVERT2RHEL / 01 Analysis
     description: Pre-conversion analysis of EL systems
