--- a/config_as_code/controller/rhel_9_inventories/job_templates.yml
+++ b/config_as_code/controller/rhel_9_inventories/job_templates.yml
@@ -50,6 +50,42 @@ controller_templates:
             - Prod
           required: true
 
+  - name: LEAPP / RHEL8to9 / 01 Analysis
+    project: Automated Management
+    playbook: leapp_analysis.yml
+    inventory: EC2 Dynamic Inventory
+    credentials:
+      - Workshop Credential
+    notification_templates_started: Telemetry
+    notification_templates_success: Telemetry
+    notification_templates_error: Telemetry
+    survey_enabled: true
+    survey:
+      name: ''
+      description: ''
+      spec:
+        - question_name: Select inventory group
+          type: multiplechoice
+          variable: dynamic_inventory_group
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list}}"
+          required: true
+    extra_vars:
+      leapp_upgrade_type: satellite
+      satellite_organization: 'Default_Organization'
+      satellite_activation_key_pre_leapp: 'RHEL8_Dev'
+      satellite_activation_key_leapp: 'RHEL8IPU_Dev'
+      leapp_repos_enabled:
+        - !unsafe 'satellite-client-6-for-rhel-{{ ansible_distribution_major_version | int + 1 }}-x86_64-rpms'
+      analysis_packages_el8:
+        - leapp-upgrade
+        - cockpit
+        - cockpit-system
+        - cockpit-leapp
+        - vdo
+      leapp_preupg_opts: '--target 9.2'
+    ask_variables_on_launch: true
+    ask_limit_on_launch: true
+
   - name: LEAPP / RHEL7to8 / 03 Rollback
     description: Revert node snapshot - selection via dynamic inventory group
     project: Automated Management
@@ -76,4 +112,35 @@ controller_templates:
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
+
+  - name: OS / Upgrade / RHEL8to9
+    project: Automated Management
+    playbook: leapp_upgrade.yml
+    inventory: EC2 Dynamic Inventory
+    credentials:
+      - Workshop Credential
+    notification_templates_started: Telemetry
+    notification_templates_success: Telemetry
+    notification_templates_error: Telemetry
+    survey_enabled: true
+    survey:
+      name: ''
+      description: ''
+      spec:
+        - question_name: Select inventory group
+          type: multiplechoice
+          variable: dynamic_inventory_group
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '.*') | map(attribute='name') | list }}"
+          required: true
+    extra_vars:
+      leapp_upgrade_type: satellite
+      satellite_organization: 'Default_Organization'
+      satellite_activation_key_pre_leapp: 'RHEL8_Dev'
+      satellite_activation_key_leapp: 'RHEL8IPU_Dev'
+      satellite_activation_key_post_leapp: 'RHEL9_Dev'
+      leapp_repos_enabled:
+        - !unsafe 'satellite-client-6-for-rhel-{{ ansible_distribution_major_version | int + 1 }}-x86_64-rpms'
+      leapp_upgrade_opts: '--target 9.2'
+    ask_variables_on_launch: true
+    ask_limit_on_launch: true
 ...
