--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -257,9 +257,9 @@ controller_templates:
       name: ''
       description: ''
       spec:
-        - question_name: Select Environment
+        - question_name: Select inventory group
           type: multiplechoice
-          variable: lifecycle_stage
+          variable: dynamic_inventory_group
           choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') | list + hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list }}"
           required: true
         - question_name: Include kernel updates? (Kernel update will result in system reboot)
