Include randomized delay

--- a/c2r_analysis.yml
+++ b/c2r_analysis.yml
@@ -47,6 +47,12 @@
       ansible.builtin.command: >-
         rpm -e --nodeps --justdb centos-release
 
+    - name: Include randomized delay before starting analysis
+      ansible.builtin.command: |
+        python3 -c 'import time;import random;zzzzz=random.uniform(15.0,60.0);time.sleep(zzzzz);print(zzzzz)'
+      delegate_to: localhost
+      connection: local
+
     - name: Generate pre-conversion analysis report
       ansible.builtin.import_role:
         name: infra.convert2rhel.analysis
