Include randomized delay

--- a/c2r_convert.yml
+++ b/c2r_convert.yml
@@ -22,6 +22,12 @@
         fail_msg: "CentOS 7 minor release must be >= 9"
         success_msg: "CentOS 7 minor release minimum requirement met, continue..."
 
+    - name: Include randomized delay before starting analysis
+      ansible.builtin.command: |
+        python3 -c 'import time;import random;zzzzz=random.uniform(15.0,60.0);time.sleep(zzzzz);print(zzzzz)'
+      delegate_to: localhost
+      connection: local
+
     - name: Execute conversion via infra.convert2rhel.convert role
       ansible.builtin.import_role:
         name: infra.convert2rhel.convert
