Switch to dynamic_inventory_group variable name to match playbook variable for hosts

--- a/c2r_convert.yml
+++ b/c2r_convert.yml
@@ -1,6 +1,6 @@
 ---
 - name: Convert2rhel conversion
-  hosts: "{{ centos_lifecycle_environment | default(omit) }}"
+  hosts: "{{ dynamic_inventory_group | default(omit) }}"
   strategy: free
   gather_facts: true
   become: true
