--- a/group_vars/control/worflow_job_templates.yml
+++ b/group_vars/control/worflow_job_templates.yml
@@ -7,7 +7,6 @@ controller_workflows:
       convert_convert2rhel_opts: '--no-rpm-va'
       convert_reboot_requested: true
       lvm_snapshots_action: create
-      dynamic_inventory_group: !unsafe '{{ centos_lifecycle_environment }}'
     inventory: EC2 Dynamic Inventory
     state: present
     organization: Default
@@ -17,7 +16,7 @@ controller_workflows:
       description: ''
       spec:
         - question_name: Select CentOS Group to convert
-          variable: centos_lifecycle_environment
+          variable: dynamic_inventory_group
           type: multiplechoice
           choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') | list}}"
           required: true
