--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -231,7 +231,7 @@ controller_templates:
   - name: SERVER / Unregister 
     project: Automated Management
     playbook: server_unregister.yml
-    inventory: Workshop Inventory
+    inventory: EC2 Dynamic Inventory
     credentials:
       - Satellite Credential
       - Workshop Credential
@@ -240,6 +240,16 @@ controller_templates:
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
+        survey_enabled: true
+    survey:
+      name: ''
+      description: ''
+      spec:
+        - question_name: Select inventory group
+          type: multiplechoice
+          variable: dynamic_inventory_group
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '.*') | map(attribute='name') | list }}"
+          required: true
     ask_limit_on_launch: true
 
   - name: OS / Patch OS to latest
