--- a/server_unregister.yml
+++ b/server_unregister.yml
@@ -25,6 +25,7 @@
     - name: Subscription manager - remove all
       ansible.builtin.command: >-
         subscription-manager remove --all
+      ignore_errors: true
 
     - name: Subscription manager - unregister
       ansible.builtin.command: >-
@@ -34,6 +35,7 @@
     - name: Subscription manager - clean
       ansible.builtin.command: >-
         subscription-manager clean
+      ignore_errors: true
 
     - name: Remove host from Satellite satellite.example.com"
       redhat.satellite.host:
